# c0c

./: .gitignore  CMakeLists.txt  Grammar.md  Lex.cpp  Lex.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Pos.h  SourceStream.cpp  SourceStream.h  StackTable.h  SymTable.cpp  SymTable.h  Type.cpp  Type.h  TypeChecker.cpp  TypeChecker.h  c0.h  checkAsm.code-workspace  common.h  compileAll.sh  grammar.md  launch.vs.json  note.md  util.cpp  util.h
ASM/: Asm.cpp  Asm.h  InstBase.h  MemInst.cpp  MemInst.h  labelGen.cpp
AST/: AST.h  ASTBase.h  ASTDrawer.cpp  ASTDrawer.h  ASTVisitor.h  CondAST.h  ExprAST.cpp  ExprAST.h  FuncAST.h  StmtAST.cpp  StmtAST.h
Arch/: ArithInst.h  InstBase.cpp  JmpInst.cpp  JmpInst.h  MiscInst.h  Reg.cpp  Reg.h  labelGen.h
Asm/: ArithInst.h  Inst.h  InstList.cpp  InstList.h  Insts.h  JmpInst.cpp  JmpInst.h  MemInst.cpp  MemInst.h  MiscInst.h  Reg.h  labelGen.cpp  labelGen.h
IR/: IRNode.cpp  IRNode.h
NaiveGen/: BfsCFGWalker.cpp  BfsCFGWalker.h  CFGSerializer.cpp  CFGSerializer.h  ConstFolder.cpp  ConstFolder.h  RegAlloc.cpp  RegAlloc.h  frameBuilder.cpp  frameBuilder.h  frameTable.cpp  frameTable.h
Quad/: BasicBlock.cpp  BasicBlock.h  CFGConverter.cpp  CFGConverter.h  CFGDrawer.cpp  CFGDrawer.h  CFGWriter.cpp  CFGWriter.h  Quads.cpp  Quads.h
SON/: ArithN.cpp  ArithN.h  BackDFSWalker.cpp  BackDFSWalker.h  CallN.cpp  CallN.h  CmpN.cpp  CmpN.h  CodeGen.cpp  CodeGen.h  ConstN.cpp  ConstN.h  ControlN.cpp  ControlN.h  DefUseBuilder.cpp  DefUseBuilder.h  FineDrawer.cpp  FineDrawer.h  IRGraph.cpp  IRGraph.h  LSect.cpp  LSect.h  MemN.cpp  MemN.h  MiscN.cpp  MiscN.h  NLoad.h  Node.cpp  Node.h  Payload.h  PhiClean.cpp  PhiClean.h  ProjN.cpp  ProjN.h  SCCP.cpp  SCCP.h  SON.h  SONBuilder.cpp  SONBuilder.h  SONDrawer.cpp  (+7 more)
SSA/: ArithValue.h  BuildContext.h  CallValue.h  CmpValue.h  ConstValue.h  Control.h  ControlBase.h  DefUse.h  MemValue.h  MiscValue.h  NodeArena.cpp  NodeArena.h  NodeBase.h  SSA.h  SSABuilder.cpp  SSABuilder.h  SSADrawer.cpp  SSADrawer.h  Value.h  ValueBase.h  design.md
TestSource/: addFunc.c0  arr_sum.c0  can.c0  charArray.c0  complete_num.c0  eightQueen.c0  errorTest.c0  fact.c0  factWithPrint.c0  final.c0  fortest.c0  funcWithConst.c0  funcWithIf.c0  funcWithMoreVar.c0  funcWithVar.c0  get_set_board.c0  globalTest.c0  localArraySum.c0  multiArg.c0  multiDef.c0  negInt.c0  nestIf.c0  p0.c0  phi_test.c0  readwrite.c0  retConst.c0  scanPrintWithControl.c0  sccp_example.c0  set.c0  simpleArray.c0  simpleDo.c0  simpleFor.c0  simpleFunc.c0  simpleIf.c0  simpleScanPrint.c0  singleBlock.c0  singleBlockWithFunc.c0  sumFunc.c0  test.txt  test3part.c0  (+3 more)
TestSource/submit/: correct1.c0  correct2.c0  correct3.c0  correct4.c0  wrong1.c0  wrong2.c0  wrong3.c0  wrong4.c0
TestSource/validate/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  test2.c0  test3.c0  test4.c0  test5.c0  test6.c0  test7.c0  test_ori1.c0  test_ori2.c0  test_ori3.c0  test_ori4.c0  test_ori_6.c0
TestSource/workload/: const_fold.c0  test1.c0  test2.c0  test3.c0  test4.c0  test5.c0  test6.c0  test7.c0
assembly/: arr_sum.asm  basic.asm  fact.asm  readwrite.asm  single_func.asm
cli/: C0.cpp  grammar.cpp  grammar_cli.cpp  grammar_cli.h  irdump.cpp  lexer.cpp  lexer_cli.cpp  lexer_cli.h  quad.cpp  quadGen.cpp  seaOfNode.cpp  ssa.cpp
tools/: super_split.py
